@@ -25,11 +25,6 @@
 
 #ifdef HAVE_SENSORDEV
 
-#define DO_ONE	0
-#define DO_AVG	1
-#define DO_MAX	2
-#define DO_MIN	3
-
 static void	count_sensor(int do_task, const struct sensor *sensor, double *aggr, int *cnt)
 {
 	double	value = sensor->value;
@@ -56,16 +51,16 @@ static void	count_sensor(int do_task, const struct sensor *sensor, double *aggr,
 
 	switch (do_task)
 	{
-		case DO_ONE:
+		case ZBX_DO_ONE:
 			*aggr = value;
 			break;
-		case DO_AVG:
+		case ZBX_DO_AVG:
 			*aggr += value;
 			break;
-		case DO_MAX:
+		case ZBX_DO_MAX:
 			*aggr = (1 == *cnt ? value : MAX(*aggr, value));
 			break;
-		case DO_MIN:
+		case ZBX_DO_MIN:
 			*aggr = (1 == *cnt ? value : MIN(*aggr, value));
 			break;
 	}
@@ -73,7 +68,7 @@ static void	count_sensor(int do_task, const struct sensor *sensor, double *aggr,
 
 static int	get_device_sensors(int do_task, int *mib, const struct sensordev *sensordev, const char *name, double *aggr, int *cnt)
 {
-	if (DO_ONE == do_task)
+	if (ZBX_DO_ONE == do_task)
 	{
 		int		i, len = 0;
 		struct sensor	sensor;
@@ -146,13 +141,13 @@ int	GET_SENSOR(AGENT_REQUEST *request, AGENT_RESULT *result)
 		return SYSINFO_RET_FAIL;
 
 	if (NULL == function || '\0' == *function)
-		do_task = DO_ONE;
+		do_task = ZBX_DO_ONE;
 	else if (0 == strcmp(function, "avg"))
-		do_task = DO_AVG;
+		do_task = ZBX_DO_AVG;
 	else if (0 == strcmp(function, "max"))
-		do_task = DO_MAX;
+		do_task = ZBX_DO_MAX;
 	else if (0 == strcmp(function, "min"))
-		do_task = DO_MIN;
+		do_task = ZBX_DO_MIN;
 	else
 		return SYSINFO_RET_FAIL;
 
@@ -176,8 +171,8 @@ int	GET_SENSOR(AGENT_REQUEST *request, AGENT_RESULT *result)
 			return SYSINFO_RET_FAIL;
 		}
 
-		if ((DO_ONE == do_task && 0 == strcmp(sensordev.xname, device)) ||
-				(DO_ONE != do_task && NULL != zbx_regexp_match(sensordev.xname, device, NULL)))
+		if ((ZBX_DO_ONE == do_task && 0 == strcmp(sensordev.xname, device)) ||
+				(ZBX_DO_ONE != do_task && NULL != zbx_regexp_match(sensordev.xname, device, NULL)))
 		{
 			if (SUCCEED != get_device_sensors(do_task, mib, &sensordev, name, &aggr, &cnt))
 				return SYSINFO_RET_FAIL;
@@ -187,7 +182,7 @@ int	GET_SENSOR(AGENT_REQUEST *request, AGENT_RESULT *result)
 	if (0 == cnt)
 		return SYSINFO_RET_FAIL;
 
-	if (DO_AVG == do_task)
+	if (ZBX_DO_AVG == do_task)
 		SET_DBL_RESULT(result, aggr / cnt);
 	else
 		SET_DBL_RESULT(result, aggr);
